# quack

./: .gitignore  Cargo.toml  Makefile  Quack.cpp  README.md  insertion.sh  table2.sh
accumulator/: Cargo.toml  build.rs
accumulator/src/: ModularInteger.hpp  MonicPolynomialEvaluator.hpp  PowerSumAccumulator.hpp  TestProgram.cpp  cbf.rs  iblt.rs  ilp.c  lib.rs  main.rs  naive.rs  power_sum.rs  psum.c
benchmark/: Cargo.toml
benchmark-overhead/: Cargo.toml
benchmark-overhead/src/: main.rs
benchmark/src/: generator.rs  main.rs
bloom-sd/: Cargo.toml
bloom-sd/src/: cbf.rs  hashing.rs  iblt.rs  lib.rs  valuevec.rs
cpp/: Makefile  ModularInteger.hpp  MonicPolynomialEvaluator.hpp  PowerSumAccumulator.hpp  TestProgram.cpp  decode.sh  insertion.sh
cpp/strawman/: Makefile  Strawman1.cpp  Strawman2.cpp
digest/: Cargo.toml
digest/src/: lib.rs  mset.rs  xor.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/quack/: all.html  fn.global_config_set_max_power_sum_threshold.html  index.html  sidebar-items.js  struct.MontgomeryQuack.html  struct.PowerSumQuackU16.html  struct.PowerSumQuackU32.html  struct.PowerSumQuackU64.html  struct.PowerTableQuack.html  struct.StrawmanAQuack.html  struct.StrawmanBQuack.html  trait.PowerSumQuack.html
docs/quack/arithmetic/: fn.eval.html  fn.eval_montgomery.html  fn.eval_precompute.html  fn.factor.html  index.html  sidebar-items.js  struct.ModularInteger.html  struct.MontgomeryInteger.html  trait.ModularArithmetic.html  type.CoefficientVector.html
docs/quack/arithmetic/evaluator/: fn.eval.html  fn.eval_montgomery.html  fn.eval_precompute.html  fn.factor.html  type.CoefficientVector.html
docs/quack/arithmetic/modint/: struct.ModularInteger.html  trait.ModularArithmetic.html
docs/quack/arithmetic/montgomery/: struct.MontgomeryInteger.html
docs/quack/montgomery/: struct.MontgomeryQuack.html
docs/quack/power_sum/: struct.PowerSumQuackU16.html  struct.PowerSumQuackU32.html  struct.PowerSumQuackU64.html  trait.PowerSumQuack.html
docs/quack/power_table/: struct.PowerTableQuack.html
docs/quack/precompute/: fn.global_config_set_max_power_sum_threshold.html
docs/quack/strawmen/: struct.StrawmanAQuack.html  struct.StrawmanBQuack.html
docs/src/quack/: lib.rs.html  macros.rs.html  montgomery.rs.html  power_sum.rs.html  power_table.rs.html  precompute.rs.html  strawmen.rs.html
docs/src/quack/arithmetic/: evaluator.rs.html  modint.rs.html  montgomery.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/serde/de/: trait.Deserialize.js
docs/type.impl/alloc/vec/: struct.Vec.js
examples/: benchmark_construct.rs  benchmark_riblt.rs  benchmark_riblt_multiplier.rs  decode_with_coeffs.c  decode_with_log.c
graphs/: README.md  decode.txt  insertion.txt  main.py  requirements.txt
include/: quack.h
montgomery-multiplication-demo/: .gitignore  main.c  preprocess.py
quack-rust/: Cargo.toml
quack-rust/src/: accumulator.rs  evaluator.rs  main.rs  modint.rs
router/: Cargo.toml
router/src/: main.rs
scripts/: construction.sh  decode.sh  insertion.sh  table2.sh
src/: ffi.rs  lib.rs  montgomery.rs  power_sum.rs  power_table.rs  strawmen.rs
src/riblt/: decoder.rs  encoder.rs  mapping.rs  mod.rs  sketch.rs  symbol.rs
strawman/: Makefile  Strawman1.cpp  Strawman2.cpp
verifier/: Cargo.toml
verifier/src/: main.rs
(+4 files in other folders)
