[package]
name = "accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-sd = { path = "../bloom-sd" }
digest = { path = "../digest" }
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.14"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cc = "1.0.73"
