[package]
name = "accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bloom-sd = { path = "../bloom-sd" }
clap = "3.1.8"
digest = { path = "../digest" }
djb_hash = "0.1.3"
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.16"
num-bigint = "0.4.3"
num-traits = "0.2.14"
num_cpus = "1.13.1"
pcap = "0.9.1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
bincode = "1.3.3"
rand = "0.8.5"

[build-dependencies]
cc = "1.0.73"

[features]
disable_validation = []
