[package]
name = "benchmark"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
accumulator = { path = "../accumulator" }
rand = "0.8.5"
log = "0.4.14"
env_logger = "0.9.0"
num-bigint = "0.4.3"
