[package]
name = "bloom-sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
bloom = "0.3.2"
num-bigint = "0.4.3"
num-traits = "0.2.14"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
siphasher = "0.3.10"

[dev-dependencies]
bincode = "1.3.3"
num-traits = "0.2.14"
