[package]
name = "digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
sha3 = "0.10.1"
