[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accumulator = { path = "../accumulator" }
bincode = "1.3.3"
clap = "3.1.8"
env_logger = "0.9.0"
log = "0.4.16"
num-bigint = "0.4.3"
ssh2 = "0.9.3"
